--- a/skills/discrete-uniform-dist.html
+++ b/skills/discrete-uniform-dist.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('probstats', 'Discrete Uniform Distribution')">
+<body onload="writeOutline('areas', 'Discrete Uniform Distribution')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -28,7 +28,7 @@
             <div class="process" id="p1">
                 <p class="process-label" onclick="loadExample('ex1','p1')">Discrete Uniform Distribution</p>
                 <p>Random variable \(X\): \(x_1, x_2, ..., x_n\) all have equal probability within range \(n\).</p>
-                <p>probability mass function: \(f(x_i) = {1 \over n}\)</p>
+                <p>probability mass function: \(P(X=x_i) = f(x_i) = {1 \over n}\)</p>
             </div>
                 <!-- <div class="process example" id="ex1"> -->
                     <!-- <p class="process-label">Example</p> -->
