--- a/skills/exp-dist.html
+++ b/skills/exp-dist.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('probstats', 'Exponential Distribution')">
+<body onload="writeOutline('areas', 'Exponential Distribution')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -39,8 +39,8 @@
                     <p>for \(0 \leq x \lt \infty\)</p>
                 </div>
                 <div class="process">
-                    <p class="process-label">Mean & Variance</p>
-                    <p>Given an exponential random variable X with parameter \(\lambda\),</p>
+                    <p class="process-label">Exponential Mean & Variance</p>
+                    <p>Given an exponential random variable X with parameter \(\lambda\):</p>
                     <p>mean, \(\mu\ = E(X) = {1 \over \lambda}\)</p>
                     <p>variance, \(\sigma^2 = V(X) = {1 \over \lambda^2}\)</p>
                 </div>
