--- a/skills/bitwise-logic-ops.html
+++ b/skills/bitwise-logic-ops.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type='text/javascript' src='/js/index.js'></script>
 </head>
-<body onload="writeOutline('compOrgStr', 'Bitwise Logic Operators')">
+<body onload="writeOutline('areas', 'Bitwise Logic Operators')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
