--- a/skills/exp-generating-fnc.html
+++ b/skills/exp-generating-fnc.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('probstats', 'Exponential Generating Functions')">
+<body onload="writeOutline('areas', 'Exponential Generating Functions')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
