--- a/skills/hypergeometric-dist.html
+++ b/skills/hypergeometric-dist.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('probstats', 'Hypergeometric Distribution')">
+<body onload="writeOutline('areas', 'Hypergeometric Distribution')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -39,6 +39,6 @@
         </div>
     </div>
             
-    <div style="width:95%" include-html='/footer-nm.html' src='/js/index.js'></div>
+    <div id="footer" include-html='/footer-nm.html' src='/js/index.js'></div>
 </body>
 </html>
