--- a/skills/independence.html
+++ b/skills/independence.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Permutations</title>
+    <title>Independence</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('areas', 'Permutations')">
+<body onload="writeOutline('areas', 'Independence')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -22,22 +22,20 @@
         </div>
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
-        
-        <div class='content'>
-            <h1>Permutations</h1>
+        <div class="content">
+            <h1>Independence</h1> 
                 <div class="process">
-                    <p class="process-label">Permutation</p>
-                    <p>Given a collection of \(n\) distinct objects, an ordered arrangement of these objects is called a permutation of the collection.</p>
-                    <p>n permute r, \(_nP_r = P(n,r) = {n! \over (n-r)!}\)</p>
-                </div>
-                <div class="process">
-                    <p class="process-label">"Permutation" with repetition</p>
-                    <p>Given a set \(S\) within which repetition is allowed, an ordered arrangement of \(r\) elements is called an \(r\)-tuple. Suppose set \(S\) consists of \(n\) elements:</p>
-                    <p>number of \(r\)-tuples = \(n^r\)</p>
+                    <p class="process-label">Properties of Independence</p>
+                    <p>For random variables \(X\) and \(Y\), the statement that \(X\) and \(Y\) are independent is logically equivalent to the following statements:</p>
+                    <ol>
+                        <li>\(f_{XY}(x,y) = f_X(x)f_Y(y)\) for all \(x\), \(y\)</li>
+                        <li>\(f_{Y|x}(y) = f_Y(y)\) for all \(x\), \(y\) with \(f_X(x)>0\)</li>
+                        <li>\(f_{X|y}(x) = f_X(x)\) for all \(x\), \(y\) with \(f_Y(y)>0\)</li>
+                        <li></li>
+                    </oL>
                 </div>
         </div>
     </div>
-            
-    <div id="footer" include-html='/footer-nm.html' src='/js/index.js'></div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
 </body>
 </html>
