--- a/skills/mforce-wire.html
+++ b/skills/mforce-wire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World in C</title>
+    <title>Electric & Magnetic Forces</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
@@ -12,33 +12,22 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('areas', 'Hello World')">
+<body onload="writeOutline('areas', 'Electric & Magnetic Forces')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">   
             <!-- <button id="practice-btn" style="width:100%;border-radius: 0; margin:0" class="' + domain + '">Practice &nearr;</button> -->
-            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
         <script type="text/javascript" src="/js/outlines.js"></script>
         
         <div class='content'>
-            <h1>Hello World</h1>
-            <!-- <div class='definition'> -->
-                <div class="process" id="p1">
-                    <p class="process-label" onclick="loadExample('ex1','p1')">Hello World Function in C</p>
-                    <pre>
-#include &lt;stdio.h&gt;
-int main() {
-    printf("Hello world!");
-    return 0;
-} </pre>
-                </div>
-                <!-- <div class="process example" id="ex1">
-                    <p class="process-label">Example</p>
-                    <p>Shaq's free throw percentage <i>p</i> is 0.527 (he makes 52.7% of free throws).</p>
-                </div>
-            </div> -->
+            <h1>Electric & Magnetic Forces</h1>
+            <div class="process">
+                <p class="process-label">Lorentz Force</p>
+                <p>$$\vec F = q\vec E + q\vec v \times \vec B$$</p>
+            </div>
         </div>
     </div>
             
