--- a/topics/emag.html
+++ b/topics/emag.html
@@ -8,36 +8,23 @@
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
+    <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body>
+<body  onload="setTopic('emag'); writeOutline('area', 'Electricity & Magnetism')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
-    <h1>Electricity & Magnetism</h1>
-    <div class='content'>
-        <p class='cards-label'>Fundamentals & Electrostatics</p>
-        <div class='cards natsci'>
-            <a class='card' href='/skills/si-units.html'>SI Units</a>
-            <a class='card' href='/skills/sig-figs.html'>Significant Figures</a>
-            <a class='card'>Vectors</a>
-            <a class='card'>Charge & Coulomb's Law</a>
-            <a class='card'>Electric Field</a>
+    <div class="content-container">
+        <div class="desktop-only skills" id="skills">
+
+            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
-        <p class='cards-label'>Conductors, Capacitors, Dielectrics</p>
-        <div class='cards natsci'>
-            <a class='card'>Conductors</a>
-            <a class='card'>Capacitors</a>
-            <a class='card'>Dielectrics</a>
+        <!-- get the function for writing the course outline in the skills menu -->
+        <script type="text/javascript" src="/js/outlines.js"></script>
+        
+        <div class="content" id="content">
+
         </div>
-        <p class='cards-label'>Electric Circuits</p>
-        <div class='cards natsci'>
-            <a class='card'>Circuit Notation</a>
-            <a class='card'>Kirchhoff's Laws</a>
-        </div>
-        <p class='cards-label'>Magnetic Fields</p>
-        <div class='cards natsci'></div>
-        <p class='cards-label'>Electromagnetism</p>
-        <div class='cards natsci'></div>
     </div>
-    <div id='footer' include-html='/footer.html' src='js/index.js'></div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
 </body>
 </html>
