--- a/skills/int-partitions.html
+++ b/skills/int-partitions.html
@@ -25,11 +25,11 @@
         <div class='content'>
             <h1>Partitions of Integers</h1>
             <div class="definition">
-                <div class="process" id="p1">
-                    <p class="process-label" onclick="loadex('ex1','p1')">Partitions</p>
+                <div class="process" id="pp">
+                    <p class="process-label" onclick="loadex('pex','pp')">Partitions</p>
                     <p>A partition of a positive integer is a combination of positive integers that add up to it.</p>
                 </div>
-                <div class="process example" id="ex1">
+                <div class="process example" id="pex">
                     <p>There are three partitions of 3: 3, 2 + 1, and 1 + 1 + 1.</p>
                     <p>2 + 1 and 1 + 2 are not counted as separate partitions!</p>
                 </div>
