--- a/skills/si-units.html
+++ b/skills/si-units.html
@@ -26,46 +26,14 @@
                 <p class="process-label">SI Base Units</p>
                 <!-- NEEDS WAY TO SHRINK AND BE VISIBLE ON MOBILE -->
                 <table>
-                    <tr>
-                        <th>Symbol</th>
-                        <th>Name</th>
-                        <th>Quantity</th>
-                    </tr>
-                    <tr>
-                        <td>s</td>
-                        <td>second</td>
-                        <td>time</td>
-                    </tr>
-                    <tr>
-                        <td>m</td>
-                        <td>meter</td>
-                        <td>length</td>
-                    </tr>
-                    <tr>
-                        <td>kg</td>
-                        <td>kilogram</td>
-                        <td>mass</td>
-                    </tr>
-                    <tr>
-                        <td>A</td>
-                        <td>ampere</td>
-                        <td>electric current</td>
-                    </tr>
-                    <tr>
-                        <td>K</td>
-                        <td>kelvin</td>
-                        <td>thermodynamic temperature</td>
-                    </tr>
-                    <tr>
-                        <td>mol</td>
-                        <td>mole</td>
-                        <td>amount of substance</td>
-                    </tr>
-                    <tr>
-                        <td>cd</td>
-                        <td>candela</td>
-                        <td>luminous intensity</td>
-                    </tr>
+                    <tr><th>Symbol</th><th>Name</th><th>Quantity</th></tr>
+                    <tr><td>s</td><td>second</td><td>time</td></tr>
+                    <tr><td>m</td><td>meter</td><td>length</td></tr>
+                    <tr><td>kg</td><td>kilogram</td><td>mass</td></tr>
+                    <tr><td>A</td><td>ampere</td><td>electric current</td></tr>
+                    <tr><td>K</td><td>kelvin</td><td>thermodynamic temperature</td></tr>
+                    <tr><td>mol</td><td>mole</td><td>amount of substance</td></tr>
+                    <tr><td>cd</td><td>candela</td><td>luminous intensity</td></tr>
                 </table>
             </div>
             <!-- <div class="process">
